Wellington Transpotation Project Completed

--- a/index.html
+++ b/index.html
@@ -31,13 +31,19 @@
     <br>
     <img src="Webimages/mybanner2.PNG" alt="Smeet" class="cenBanner">
     <img src="Webimages/myAvatar.jpg" alt="Smeet" class="cenBanner1">
-    <p align="center" class="centText" style="color: #0F78C3">Hello! My name is <b><em>Smeet</em></b>.</p><p class="centText" align="center">I am passionate about web and mobile development. 
-        I am a travel enthusiast. An aspiring software developer.</p>
+    <p align="center" class="centText" style="color: #0F78C3">Hello! My name is <b><em>Smeet</em></b>.</p>
+    <p class="centText" align="center">
+        Being an aspiring software developer, I am passionate about web and mobile development. I like to bring
+        innovation and change together.
 
-        <div class="sticky">
-                <div class="stickrow">projects + Blog</div>
-        </div>
-        <hr>
+        <!-- I am passionate about web and mobile development.  -->
+        <!-- I am a travel enthusiast. An aspiring software developer. -->
+    </p>
+
+    <div class="sticky">
+        <div class="stickrow">projects + Blog</div>
+    </div>
+    <hr>
     <!-- Index Page sports titles ------------------------------>
     <div class="centerWrap">
         <!--Centering everything in the div-->
