--- a/Conway'sGameofLife.html
+++ b/Conway'sGameofLife.html
@@ -31,7 +31,7 @@
         <nav class="shift">
             <ul>
                 <li><a href="#overview">Overview</a></li>
-                <li><a href="#design">Code Design</a></li>
+                <li><a href="#design">Design</a></li>
                 <li><a href="#implymentation">IMPLEMENTATION</a></li>
                 <li><a href="#refection">Refection</a></li>
             </ul>
