--- a/mywork.html
+++ b/mywork.html
@@ -265,15 +265,15 @@
                            <img src="projects/WellingtonTransportation/0039.jpg" alt="Wellington Transportation project" class="border-tlr-radius">
                         </div>
                         <div class="card__meta">
-                           <a href="#">Design</a>
+                           <a href="wellingtonTransportation.html">Visual Design</a>
                            <time>2014</time>
                         </div>
                         <div class="card__content card__padding">
                            <div class="card__share">
-                              <a id="share" class="share-toggle share-icon" href="#"></a>
+                              <a id="share" class="share-toggle share-icon" href="wellingtonTransportation.html"></a>
                            </div>
                            <article class="card__article">
-                              <h3><a href="#">Wellington Transportation</a></h3>
+                              <h3><a href="wellingtonTransportation.html">Wellington Transportation</a></h3>
                               <p>Designing an ideal solution for Wellingtonians to commute for the border sense. A yearlong project with stakeholders such as On Yer Bikes & Ellmers to develop a transportation medium.</p>
                            </article>
                         </div>
