Hackathon project complete

--- a/hackathon.html
+++ b/hackathon.html
@@ -31,9 +31,9 @@
 		<nav class="shift">
 			<ul>
 				<li><a href="#overview">Overview</a></li>
-				<li><a href="#faq">Day 1</a></li>
-				<li><a href="#feature">Day 2</a></li>
-				<li><a href="#reflection">Final Outcome</a></li>
+				<li><a href="#day1">Day 1</a></li>
+				<li><a href="#day2">Day 2</a></li>
+				<li><a href="#reflection">Reflection</a></li>
 			</ul>
 		</nav>
 		<div class="progress-container">
@@ -69,6 +69,7 @@
 			would have the most creativity and would be able a quality user experience.</p>
 		<h3 style="color: orange">Team Formation </h3>
 		<p><b>Team Name </b>: Four toed sloth (Named by Ryan, the college student)</p>
+		<span id="day1"></span>
 		<p><b>Members </b>: Callum & Smeet (Software developers), Ryan Eagles From (Wellington Girls College) and 2
 			Business analysists.</p>
 		<h1 class="w">Day 1</h1>
@@ -101,6 +102,7 @@
 			<iframe src="https://docs.google.com/presentation/d/e/2PACX-1vQZGFTYEo3s6KXXaUW9IOYyNH49WiXOghuMLvAjswsdolC5xwidcg6WPcJRdx9NACMbcw12lojxBJUe/embed?start=true&loop=true&delayms=3000"
 			 frameborder="0" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
 		</div>
+		<span id="day2"></span>
 		<p>Based on the comments we received from the mentors we realise that we needed to cut down on our scope
 			because we don’t have much time and possibly just focus on something simple. We decided to make a basic
 			periodic table game. </p>
@@ -126,15 +128,28 @@
 		<img src="projects/Hackathon/table.png" class="cenimg" style="max-width: 800px"><br>
 		<li>All element buttons display an atomic number and letter symbol. Elements have also been coloured coded
 			based on the type of element, such as metals and non-metals. </li>
+		<span id="reflection"></span>
 		<li>On hover of an element the element name would display and when click a discption of the element is
 			displayed above the table. </li>
+		<h1 class="w">Reflection</h1>
 		<h3 style="color: orange">Challenges</h3>
 		<li>Devlopeing the game logic to create the formula was the most difficult challenge. I resloved this as I stored the
 			current element as variable and compare it with the following element and count the amount of time an element has
 			been press consecutively. If the element changes the counter resets the string builds on. I also had to create a
 			regex which removes and rewrites the pervious element with added number if element was the same. </li>
 		<img src="projects/Hackathon/gamefinished.png" class="cenimg" style="max-width: 800px"><br>
-		<li>Another challenge was creating the periodic table because it was a tedious task.  </li>
+		<li>Another challenge was creating the periodic table because it was a tedious task. </li>
+		<h3 style="color: orange">Conclusion</h3>
+		<p>What an experience it has been! The Wellington Science Hackathon 2018 was full of energy and hectic chaos, but at
+			the end, we all got through. I was very proud of what I able to produce as the sole web developer programmer in a
+			short time and with Ryans Vision which allowed the team to solve the problem and also the help of other team members
+			and lastly amazing mentors. The second day of the hackathon was stressful after a late night for me after hacking
+			away the building 118 element periodic table. Building the functionality was difficult on the second day as it had
+			to create the product equation, and a mentor I would like to give a huge thanks to is Clive Vermeulen from Xero for
+			guiding to fix and rebuild the algorithm for the equation. In the hackathon, I learnt more than what I initially
+			anticipated. However, one thing that could be improved is the team dynamics and effort from the business analysis
+			students. I hope to participate in more development hackathons in the future to create innovate solution and to have
+			fun in an energy packed environment. </p>
 		<br>
 		<hr>
 		<a id="butproto" href="https://smeet-patel.github.io/hackathon/" target="_blank">View
