--- a/wellingtonTransportation.html
+++ b/wellingtonTransportation.html
@@ -42,7 +42,7 @@
     <span id="overview"></span>
     <br>
     <div class="centerWrap">
-        <p>Wellington Transportation was a yearlong (9 months) project with relevant stakeholders to develop a
+        <p>Wellington Transportation was a yearlong (9 months) project with relevant stakeholders looking to develop a
             transportation medium solution for Wellingtonians with the border sense. For this project, I had a choose a
             transportation issue which I wanted to solve for Wellingtonians and saw the potential to design an
             individual
@@ -68,7 +68,7 @@
         </div>
         <P>I used a Gantt chart for this project which allowed me to manage my time better for the project and compare
             the planned vs actual time frame. The Gantt chart was an effective exercise that allowed me to better plan
-            the overall timeline of the project task and time management tool I use on a weekly bases. </P>
+            the overall timeline of the project task and it is a time management tool I use on a weekly bases. </P>
         <h3>Project Plan, Concepts, Stakeholder and Milestone Analysis.</h3>
         <!-- </div> -->
         <div class="video-container" style="text-align: center;">
