Refactor code update

--- a/CyberCV.html
+++ b/CyberCV.html
@@ -5,6 +5,19 @@
     <title>Cyber CV 2015 | Project</title>
     <!-- Stylesheets ------------------------------>
     <link rel="stylesheet" type="text/css" href="CSS/project.css">
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131912613-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-131912613-1');
+    </script>
+
     <!-- My my mini icon ------------------------------>
     <link rel="icon" href="spMini.png">
     <!-- Make the scale of screen to 1 to device ------------------------------>
@@ -47,7 +60,8 @@
         <a id="butproto" href="https://smeet-patel.github.io/Cyber-CV.-Where-do-yourself-in-3-years--My-website-"
             target="_blank">View
             My Cyber CV (2015)</a>
-        <p>As a requirement of an Information System 101 course in 2015 at Victoria University of Wellington, we were tasked to developed a 
+        <p>As a requirement of an Information System 101 course in 2015 at Victoria University of Wellington, we were
+            tasked to developed a
             Cyber CV using basic
             HTML and CSS. We were asked, 'Where do you see yourself in 3 years' time?'</p>
         <p>For this project, the objective was to use the proper HTML structure with the DOCTYPE, HEAD, body tag
@@ -68,7 +82,8 @@
     <div class="centerWrap">
         <h1 class="w">Development</h1>
         <h3 style="color: orange">Phase 1 planning the Website </h3>
-        <p><b>Colour:</b> It would not make sense if I didn't use my favourite colour. Greenery (brighter tone of green),
+        <p><b>Colour:</b> It would not make sense if I didn't use my favourite colour. Greenery (brighter tone of
+            green),
             is often associated with nature and has a relaxation effect. <br>My accent colour was a lighter tone of
             blue because it appears to be a colour which does not only look professional but sets a calmness and people
             trust the colour in a business sense. <br>For the text, I used Black and light grey for the background to
@@ -96,7 +111,8 @@
             causing problems. </li>
 
         <h1 class="w">End Product</h1>
-        <p style="color: red"><b>Note that some of the information is fictional and not real. (For example my contact details and work Experience at New World and Xero)</b></p>
+        <p style="color: red"><b>Note that some of the information is fictional and not real. (For example my contact
+                details and work Experience at New World and Xero)</b></p>
         <div class="hoverOverImage">
             <img src="projects/CyberCV/cv1.png" alt="Home page of my Cyber CV" class="hoverOverImage-layer_bottom" id="conner_round"
                 style="width:100%">
@@ -120,7 +136,8 @@
                 <div class="hoverOverImage-text">Work Experience and Education (MY Cyber CV 2015)</div>
             </div>
         </div>
-        <p style="color: red"><b>Note that some of the information is fictional and not real. (For example my contact details and work Experience at New World and Xero)</b></p>
+        <p style="color: red"><b>Note that some of the information is fictional and not real. (For example my contact
+                details and work Experience at New World and Xero)</b></p>
         <p>Work Experience Page</p>
         <div class="hoverOverImage">
             <img src="projects/CyberCV/cv4.png" alt="Interest & hobbies + reference (My CYBER CV 2015)" class="hoverOverImage-layer_bottom"
