--- a/CyberCV2015.html
+++ b/CyberCV2015.html
@@ -4,6 +4,15 @@
 		<title>Sports World</title>
 		<!-- Stylesheets ------------------------------>
 		<link rel="stylesheet" type="text/css" href="style.css">
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131912613-1"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-131912613-1');
+		</script>
 		<link rel="stylesheet" type="text/css" href="style1.css">
 		<!-- My my mini icon ------------------------------>
 		<link rel="icon" href="spMini.png">
