--- a/centralPolice.html
+++ b/centralPolice.html
@@ -3,6 +3,16 @@
 
 <head>
     <title>Central Police Prototype | Project</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131912613-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-131912613-1');
+    </script>
+
     <!-- Stylesheets ------------------------------>
     <link rel="stylesheet" type="text/css" href="CSS/project.css">
     <!-- My my mini icon ------------------------------>
@@ -84,22 +94,28 @@
         <div id="wire"></div><br>
         <h1 class="w">Wireframes </h1>
         <div style="margin: 0 auto;max-width: 800px; width: 100%;">
-        <p><b>Wireframe</b> were used a visual schematic or template of the screen to communicate interface and
-            interaction design. I used a sketchy GUI window style using an application called Pencil. Menus, buttons
-            text fields and other elements are displayed which it made better easier to follow while developing the
-            prototype. This was a great way to ensure everything had been captured or to identify any gaps that needed
-            to be addressed were satisfied.</p>
-        <img src="centralpolice/wireframeCP.png" alt="Wireframes" class="cenimg" style="max-width: 800px"><br>
-        <p>The wireframe above is the dashboard form with the report's details on the top left, followed by the status
-            and level of risk. It also nice to have the officer narrations for those secondary personas. On the right
-            side, the user can log the incident, enter the offender details, view map and dispatch units. </p>
-        <img src="centralpolice/simpleWireframe.png" alt="Wireframes" class="cenimg" style="max-width: 800px">
-        <div id="feed"></div><br>
-        <h1 class="w">User Feedback </h1>
-        <p>To get feedback from other people for my initial prototype, used Google forms for the user to give valuable
-            feedback based on the USE questionnaire questions. The main category of questions I asked was usefulness,
-            ease of use, ease of learning and satisfaction. The feedback process enabled me to enhance the user
-            experience and interaction for the prototype.</p>
+            <p><b>Wireframe</b> were used a visual schematic or template of the screen to communicate interface and
+                interaction design. I used a sketchy GUI window style using an application called Pencil. Menus,
+                buttons
+                text fields and other elements are displayed which it made better easier to follow while developing the
+                prototype. This was a great way to ensure everything had been captured or to identify any gaps that
+                needed
+                to be addressed were satisfied.</p>
+            <img src="centralpolice/wireframeCP.png" alt="Wireframes" class="cenimg" style="max-width: 800px"><br>
+            <p>The wireframe above is the dashboard form with the report's details on the top left, followed by the
+                status
+                and level of risk. It also nice to have the officer narrations for those secondary personas. On the
+                right
+                side, the user can log the incident, enter the offender details, view map and dispatch units. </p>
+            <img src="centralpolice/simpleWireframe.png" alt="Wireframes" class="cenimg" style="max-width: 800px">
+            <div id="feed"></div><br>
+            <h1 class="w">User Feedback </h1>
+            <p>To get feedback from other people for my initial prototype, used Google forms for the user to give
+                valuable
+                feedback based on the USE questionnaire questions. The main category of questions I asked was
+                usefulness,
+                ease of use, ease of learning and satisfaction. The feedback process enabled me to enhance the user
+                experience and interaction for the prototype.</p>
         </div>
         <div class="video-container1" style="text-align: center;">
             <iframe src="https://docs.google.com/presentation/d/e/2PACX-1vRKb75Ro6Dl8gpPhkhzf1FkkJZHmIUnG086UuVQhAPmr7djTMzRv9ixjb5s866QTX-INVPIM64n3dSK/embed?start=true&loop=true&delayms=2000"
