--- a/aboutme.html
+++ b/aboutme.html
@@ -3,6 +3,16 @@
 
 <head>
     <title>About me</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131912613-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-131912613-1');
+    </script>
+
     <link rel="stylesheet" type="text/css" href="CSS/project.css">
     <link rel="stylesheet" type="text/css" href="CSS/style1.css">
     <!-- My my mini icon ------------------------------>
@@ -25,7 +35,8 @@
     <br>
     <img src="AboutMe/aboutmeBanner.png" alt="Smeet" class="cenBanner">
     <img src="AboutMe/aboutmeSquareBanner.png" alt="Smeet" class="cenBannersquare">
-    <p align="center" class="centText" style="color: black">Hello, I am <b>Smeet Patel</B> from Wellington, New Zealand. By now you may be
+    <p align="center" class="centText" style="color: black">Hello, I am <b>Smeet Patel</B> from Wellington, New
+        Zealand. By now you may be
         wondering about the design for the logo. The reasoning is simple, Smeet means to smile.</p>
     <div class="centerWrap">
         <div id="lineA">
@@ -33,10 +44,14 @@
                 design for the logo. The reasoning is simple, Smeet means to smile.</p> -->
             <p style="color: black">
                 I am an aspiring software developer who, through experience has gained technical and interpersonal
-                skills. I have almost finished my <u>Master of Software Development</u> degree and have completed <u>Bachelor of
-                Commerce degree</u> having acquired knowledge in the fields of <em>accountancy, taxation and information systems with an
-                IT specialisation. I am passionate about <em>web and mobile development with a UX focus</em>. I am developing my
-                skills</em> in software programming to expand on my technical skills by completing a Masters at VUW and
+                skills. I have almost finished my <u>Master of Software Development</u> degree and have completed <u>Bachelor
+                    of
+                    Commerce degree</u> having acquired knowledge in the fields of <em>accountancy, taxation and
+                    information systems with an
+                    IT specialisation. I am passionate about <em>web and mobile development with a UX focus</em>. I am
+                    developing my
+                    skills</em> in software programming to expand on my technical skills by completing a Masters at VUW
+                and
                 doing various programming projects in my spare time.
                 <!-- I am a <u>Master of Software Development student</U> and have completed <u>Bachelor of Commerce degree</u>
                 having acquired knowledge in the fields of <em>accountancy, taxation, commercial law and information
@@ -45,45 +60,47 @@
                         my spare time. -->
             </p>
             <div class="row">
-                    <div class="column">
-                        <br>
-                        <!--container consist the image and text to display center
+                <div class="column">
+                    <br>
+                    <!--container consist the image and text to display center
                          when full screen---------------------------------------->
-                        <div class="hoverOverImage">
-                            <img src="AboutMe/me2.jpg" alt="Webapp" class="hoverOverImage-layer_bottom" id="conner_round">
-                            <!--<a href="aboutme.html">-->
-                            <div class="hoverOverImage-layer_top">
-                                <div class="hoverOverImage-text">Hike upto the Belmont Trig, December 2017</div>
-                            </div>
-                            </a>
+                    <div class="hoverOverImage">
+                        <img src="AboutMe/me2.jpg" alt="Webapp" class="hoverOverImage-layer_bottom" id="conner_round">
+                        <!--<a href="aboutme.html">-->
+                        <div class="hoverOverImage-layer_top">
+                            <div class="hoverOverImage-text">Hike upto the Belmont Trig, December 2017</div>
                         </div>
-                        <br><br>
+                        </a>
                     </div>
-                    <!--second col-------------->
-                    <div class="column">
-                        <br>
-                        <div class="hoverOverImage">
-                            <img src="AboutMe/web1.png" alt="Native App" class="hoverOverImage-layer_bottom" id="conner_round">
-                            <div class="hoverOverImage-layer_top">
-                                <div class="hoverOverImage-text">Developing my website</div>
-                            </div>
-                        </div>
-                        <br><br>
-                    </div>
+                    <br><br>
                 </div>
-            <p style="color: black">When I am not studying, you will find me reading about new technologies, the current affairs
+                <!--second col-------------->
+                <div class="column">
+                    <br>
+                    <div class="hoverOverImage">
+                        <img src="AboutMe/web1.png" alt="Native App" class="hoverOverImage-layer_bottom" id="conner_round">
+                        <div class="hoverOverImage-layer_top">
+                            <div class="hoverOverImage-text">Developing my website</div>
+                        </div>
+                    </div>
+                    <br><br>
+                </div>
+            </div>
+            <p style="color: black">When I am not studying, you will find me reading about new technologies, the
+                current affairs
                 or a Lonely Planet, exploring new places (hiking and travelling), watching shows such as the Grand
                 Tour, The Block NZ, Grand Designs or more often than not working on a personal project. Being a
                 creative minded person, I enjoy thinking about new ways to improve things, to build solutions for
                 issues. I believe that to predict the future; you have to create the future or very much be part of the
                 forefront of changing technology and being innovative.</p>
-            <p style="color: black">Currently, I am Working on updating and adding past projects to the website, enhancing the
+            <p style="color: black">Currently, I am Working on updating and adding past projects to the website,
+                enhancing the
                 user experience. Along with the site, I am learning Android Studio and looking to convert java
                 applications to Android apps. I am also planning to make a native application for construction
                 projects, to improve communication between key stakeholders from a financial perspective adding more
                 transparency to the building process.</p>
             <!--enable for the flex tiles row and col--->
-    
+
             <div class="wrap-collabsible">
                 <input id="collapsible" class="toggle" type="checkbox">
                 <label for="collapsible" class="lbl-toggle">My Experience and Skills</label>
