--- a/happybuilding.html
+++ b/happybuilding.html
@@ -2,6 +2,15 @@
 <html>
 	<head>
 		<title>Sports World</title>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-131912613-1"></script>
+		<script>
+		window.dataLayer = window.dataLayer || [];
+		function gtag(){dataLayer.push(arguments);}
+		gtag('js', new Date());
+
+		gtag('config', 'UA-131912613-1');
+		</script>
 		<!-- Stylesheets ------------------------------>
 		<link rel="stylesheet" type="text/css" href="style.css">
 		<link rel="stylesheet" type="text/css" href="style1.css">
