--- a/mywork.html
+++ b/mywork.html
@@ -3,6 +3,16 @@
 
 <head>
    <title>My Work</title>
+   <!-- Global site tag (gtag.js) - Google Analytics -->
+   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-131912613-1"></script>
+   <script>
+   window.dataLayer = window.dataLayer || [];
+   function gtag(){dataLayer.push(arguments);}
+   gtag('js', new Date());
+
+   gtag('config', 'UA-131912613-1');
+   </script>
+
    <link rel="stylesheet" type="text/css" href="CSS/style1.css">
    <link rel="stylesheet" type="text/css" href="CSS/project.css">
    <!-- My my mini icon ------------------------------>
