--- a/dimmuBurger.html
+++ b/dimmuBurger.html
@@ -46,7 +46,7 @@
                 <li><a href="#overview">Overview</a></li>
                 <li><a href="#planning">Planning</a></li>
                 <li><a href="#dev">Development</a></li>
-                <li><a href="#">Reflection</a></li>
+                <li><a href="#reflection">Reflection</a></li>
             </ul>
         </nav>
         <div class="progress-container">
@@ -317,8 +317,9 @@
         <p>One challenging thing that we wanted to do was to display when the status of a burger changes from ‘new’ to
             ‘received’ to ‘in progress’ to ‘complete’ as it was updated by the kitchen staff in the Production Line
             app. Originally we had the idea that we might be able to ask the database if there had been any changes to
-            the database in a timed interval, say every 3 seconds. AJAX, which is a set of techniques in Javascript,
+            the database in a timed interval, say every 3 seconds. AJAX, which is a set of techniques in Javascript
             uses HTTP request and allows the web page to be asynchronously updated. To get this set up, we mostly
+            <span id="reflection"></span>
             followed this guide https://www.w3schools.com/xml/ajax_intro.asp as AJAX has a set way of doing things such
             as check the status is 200 (everything O.K.) </p>
         <h1 class="w">Reflection</h1>
