--- a/dimmuBurger.html
+++ b/dimmuBurger.html
@@ -363,7 +363,7 @@
             </ul>
         </ul>
         <h3 style="color: orange">Conclusion </h3>
-        <p>We are happy with the final outcome of our project and feel that we successfully managed to incorporate the
+        <p>Overall, we were happy with the final outcome of our project and feel that we successfully managed to incorporate the
             main functionality for the two applications while having a strong emphasis for user experience for the web
             app. </p>
         <p>Our team functioned and collaborated very well as a group, providing support and assistance to each other
