--- a/myblog.html
+++ b/myblog.html
@@ -22,6 +22,7 @@
     <!-- Make the scale of screen to 1 to device ------------------------------>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
 </head>
 
 <body>
@@ -57,10 +58,13 @@
     <!-- Map and instructions ------------------------------>
     <div class="centerWrap">
         <h1 class="w">Traveller Guide</h1>
-        <div id="map"></div>
+        <!-- <div class="map-responsive"> -->
+        <div id="map">
+        </div>
         <!-- <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d305263.6855162783!2d115.12602790215035!3d-8.496069224919468!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2dd23d739f22c9c3%3A0x54a38afd6b773d1c!2sUbud%2C+Gianyar%2C+Bali%2C+Indonesia!5e1!3m2!1sen!2snz!4v1544684952370"
 				frameborder="0" style="border:0; width: 100%; min-height: 400px; border-radius: 15px;" allowfullscreen></iframe> -->
-        <p style="color: orange" id="clickblog">Click on a marker to read the blog.</p>
+        <p style="color: orange" id="clickblog">Click on a marker to read the blog.<br><span style="font-size: calc(0.2vw + 9px); color: red">If the map does not load, please refresh the page.</span></p>
+        <!-- <p style="color: orange" id="clickblog;" style="font-size: 0.5vh"></p>If the map does not load, please refresh the page.</p> -->
         <!-- <p id="demo">Testing purposes</p> -->
     </div>
     <!-- Bali blog -->
@@ -248,7 +252,6 @@
     </footer>
     <!-- script and map -->
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAYNYcccCa4JnUmOlg_Aq7gpDymQLi0f3Q&callback=initMap"></script>
-    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
     <script type="text/javascript" src="Javascript/Smeetjavascript.js"></script>
     <script type="text/javascript" src="Javascript/map.js"></script>
 </body>
